* Use gmcs but not mcs for Generic.

--- a/csharp/SConstruct
+++ b/csharp/SConstruct
@@ -20,7 +20,7 @@ McsLibBuilder = SCons.Builder.Builder(action = '$CSCLIBCOM',
 env['BUILDERS']['CLIProgram'] = McsBuilder
 env['BUILDERS']['CLILibrary'] = McsLibBuilder
 
-env['CSC'] = 'mcs'
+env['CSC'] = 'gmcs'
 env['_CSCLIBS'] = "${_stripixes('-r:', CILLIBS, '', '-r', '', __env__)}"
 env['_CSCLIBPATH'] = "${_stripixes('-lib:', CILLIBPATH, '', '-r', '', __env__)}"
 env['CSCFLAGS'] = SCons.Util.CLVar('')
