--- a/java/build.xml
+++ b/java/build.xml
@@ -1,21 +1,38 @@
 <?xml version="1.0"?>
-<project name="CocoXml/R" default="distclean" basedir=".">
+<project name="CocoXml" default="distclean" basedir=".">
 	<target name="usage">
 		<echo message="Ant Targets:"/>
 		<echo message="    clean: Full clean up."/>
-		<echo message="    build: Build Coco/R."/>
+		<echo message="    build: Build CocoXml."/>
 		<echo message="    dist: Generate a distribution JAR file."/>
 		<echo message="    distclean: Like dist, but deletes the generated class files."/>
-		<echo message="    zip: Create a zip file with the Coco/R sources."/>
-		<echo message="    self: Create the parser and scanner from the atg."/>
+		<echo message="    samples: Build samples."/>
 	</target>
 	
 	<target name="init">
 		<tstamp/>
 	</target>
 	
-	<target name="build" depends="init">
-		<echo message="Building CocoXml/R..."/>
+	<target name="coco-dist">
+	        <ant dir="coco" antfile="build.xml" target="dist"/>
+	</target>
+
+	<target name="atg2java" depends="coco-dist">
+	        <dependset>
+		        <srcfilelist files="CocoXml.atg,Scanner.frame"/>
+			<targetfilelist files="Scanner.java"/>
+		</dependset>
+		<dependset>
+		        <srcfilelist files="CocoXml.atg,Parser.frame"/>
+			<targetfilelist files="Parser.java"/>
+		</dependset>
+	        <java jar="coco/Coco.jar" fork="true">
+		        <arg line="-package CocoXml CocoXml.atg"/>
+		</java>
+	</target>
+
+	<target name="build" depends="init, atg2java">
+		<echo message="Building CocoXml..."/>
 		<javac sourcepath="" srcdir="." destdir="." source="5" target="5">
 			<include name="*.java"/>
 			<compilerarg value="-Xlint"/>
@@ -23,7 +40,7 @@
 	</target>
 	
 	<target name="dist" depends="build">
-		<echo message="Generating CocoXml/R jar..."/>
+		<echo message="Generating CocoXml jar..."/>
 		<jar
 			destfile="CocoXml.jar"
 			basedir="."
@@ -35,12 +52,6 @@
 	<target name="distclean" depends="dist">
 		<antcall target="cleantemps"/>
 	</target>	
-	
-	<target name="self">
-		<java jar="CocoXml.jar" fork="true">
-			<arg line="-package CocoXml CocoXml.atg" />
-		</java>
-	</target>
 
 	<target name="cleantemps">
 		<delete dir="CocoXml"/>
@@ -49,6 +60,10 @@
 	<target name="clean">
 		<antcall target="cleantemps"/>
 		<delete file="CocoXml.jar"/>
+	</target>
+
+	<target name="samples" depends="dist">
+	        <ant dir="samples" antfile="build.xml" target="dist"/>
 	</target>
 
 	<target name="svn-diff">
@@ -62,4 +77,3 @@
 	</target>
 
 </project>
-
