--- a/trunk/generic/SConstruct
+++ b/trunk/generic/SConstruct
@@ -7,6 +7,6 @@ import os.path
 env = Environment(CCFLAGS = ['-g', '-Wall'])
 env.ParseConfig('pkg-config --cflags --libs glib-2.0')
 
-lib = env.Library('coco', ['BitArray.c'])
+lib = env.Library('coco', ['BitArray.c', 'CharSet.c'])
 env.Program('Coco', ['Coco.c', 'Defs.c', 'DFA.c', 'Tab.c', lib])
 env.Program('CocoXml', ['CocoXml.c', lib])
