--- a/trunk/generic/SConstruct
+++ b/trunk/generic/SConstruct
@@ -4,9 +4,13 @@
 
 import os.path
 
-env = Environment(CCFLAGS = ['-g', '-Wall'])
+env = Environment(CCFLAGS = ['-g', '-Wall'],
+                  CPPPATH = [os.getcwd()])
 env.ParseConfig('pkg-config --cflags --libs glib-2.0')
+lib = env.Library('coco', ['Defs.c', 'BitArray.c', 'CharSet.c'])
 
-lib = env.Library('coco', ['BitArray.c', 'CharSet.c'])
-env.Program('Coco', ['Coco.c', 'Defs.c', 'DFA.c', 'Tab.c', lib])
+Export('env', 'lib')
+SConscript(os.path.join('tests', 'SConscript'))
+
+env.Program('Coco', ['Coco.c', 'DFA.c', 'Tab.c', lib])
 env.Program('CocoXml', ['CocoXml.c', lib])
