--- a/trunk/generic/tests/SConscript
+++ b/trunk/generic/tests/SConscript
@@ -4,4 +4,5 @@
 
 Import('env', 'lib')
 
-env.Program('AutoTests', ['AutoTests.c', 'TestCharSet.c', lib])
+env.Program('AutoTests', ['AutoTests.c', 'TestBitArray.c', 'TestCharSet.c',
+                          lib])
