--- a/trunk/generic/SConstruct
+++ b/trunk/generic/SConstruct
@@ -7,8 +7,9 @@ import os.path
 env = Environment(CCFLAGS = ['-g', '-Wall'],
                   CPPPATH = [os.getcwd()])
 env.ParseConfig('pkg-config --cflags --libs glib-2.0')
-lib = env.Library('coco', ['Defs.c', 'BitArray.c', 'CharSet.c', 'CharClass.c',
-                           'Graph.c', 'Node.c', 'Position.c', 'Symbol.c'])
+lib = env.Library('coco', ['Defs.c', 'Action.c', 'BitArray.c', 'CharSet.c',
+                           'CharClass.c', 'Graph.c', 'Node.c', 'Position.c',
+                           'State.c', 'Symbol.c', 'Target.c'])
 
 Export('env', 'lib')
 SConscript(os.path.join('tests', 'SConscript'))
