--- a/generic/SConstruct
+++ b/generic/SConstruct
@@ -7,10 +7,10 @@ import os.path
 env = Environment(CCFLAGS = ['-g', '-Wall'],
                   CPPPATH = [os.getcwd()])
 env.ParseConfig('pkg-config --cflags --libs glib-2.0')
-lib = env.Library('coco', ['Defs.c', 'Action.c', 'BitArray.c', 'CharSet.c',
-                           'CharClass.c', 'Comment.c', 'Graph.c', 'Melted.c',
-                           'Node.c', 'Position.c', 'State.c', 'Symbol.c',
-                           'Target.c'])
+lib = env.Library('coco', ['Defs.c', 'Action.c', 'ArrayList.c', 'BitArray.c',
+                           'CharSet.c', 'CharClass.c', 'Comment.c', 'Graph.c',
+                           'Melted.c', 'Node.c', 'Position.c', 'State.c',
+                           'Symbol.c', 'Target.c'])
 
 Export('env', 'lib')
 SConscript(os.path.join('tests', 'SConscript'))
