--- a/trunk/generic/SConstruct
+++ b/trunk/generic/SConstruct
@@ -7,9 +7,9 @@ import os.path
 env = Environment(CCFLAGS = ['-g', '-Wall'],
                   CPPPATH = [os.getcwd()])
 lib = env.Library('coco', ['Defs.c', 'Action.c', 'ArrayList.c', 'BitArray.c',
-                           'CharSet.c', 'CharClass.c', 'Comment.c', 'Graph.c',
-                           'HashTable.c', 'Melted.c', 'Node.c', 'Position.c',
-                           'State.c', 'Symbol.c', 'Target.c'])
+                           'CharSet.c', 'CharClass.c', 'Comment.c', 'Frame.c',
+                           'Graph.c', 'HashTable.c', 'Melted.c', 'Node.c',
+                           'Position.c', 'State.c', 'Symbol.c', 'Target.c'])
 
 Export('env', 'lib')
 SConscript(os.path.join('tests', 'SConscript'))
