--- a/trunk/generic/SConstruct
+++ b/trunk/generic/SConstruct
@@ -10,7 +10,8 @@ env = Environment(CCFLAGS = ['-g', '-Wall'],
 lib = env.Library('coco', ['Defs.c', 'Action.c', 'ArrayList.c', 'BitArray.c',
                            'CharSet.c', 'CharClass.c', 'Comment.c', 'Frame.c',
                            'Graph.c', 'HashTable.c', 'Melted.c', 'Node.c',
-                           'Position.c', 'State.c', 'Symbol.c', 'Target.c'])
+                           'Position.c', 'SortedList.c', 'State.c', 'Symbol.c',
+                           'Target.c'])
 
 Export('env', 'lib')
 SConscript(os.path.join('tests', 'SConscript'))
