--- a/trunk/cpp/samples/SConscript
+++ b/trunk/cpp/samples/SConscript
@@ -7,10 +7,12 @@ Import('env')
 Import('CocoXml')
 Import('XmlScannerFrame', 'XmlParserFrame')
 
-env.Command(['XmlScanner.cxx', 'XmlParser.cxx'], [CocoXml, 'rss.atg'],
+env.Command(['XmlScanner.cxx', 'XmlScanner.hxx', 'XmlParser.cxx', 'XmlParser.hxx'], [CocoXml, 'rss.atg'],
             './${SOURCES[0]} -frames ${SOURCES[0].srcdir} -namespace cocoxml ${SOURCES[1]}')
 
 env.Depends('XmlScanner.cxx', XmlScannerFrame)
+env.Depends('XmlScanner.hxx', XmlScannerFrame)
 env.Depends('XmlParser.cxx', XmlParserFrame)
+env.Depends('XmlParser.hxx', XmlParserFrame)
 
-#env.Program('samples', ['Main.cpp', 'RSSData.cpp', 'XmlScanner.cpp', 'XmlParser.cpp'])
+env.Program('samples', Glob("*.cxx"))
