* Move some files to their own place.

--- a/generic/core/SConscript
+++ b/generic/core/SConscript
@@ -5,4 +5,5 @@
 Import('env')
 Import('libobjs')
 
-libobjs.extend(env.Object('Defs.c'))
+libobjs.extend(map(lambda src: env.Object(src),
+                   ['Defs.c', 'ArrayList.c', 'HashTable.c']))
