--- a/trunk/generic/core/SConscript
+++ b/trunk/generic/core/SConscript
@@ -6,4 +6,5 @@ Import('env')
 Import('libobjs')
 
 libobjs.extend(map(lambda src: env.Object(src),
-                   ['Defs.c', 'ArrayList.c', 'BitArray.c', 'HashTable.c']))
+                   ['Defs.c', 'Object.c', 'ArrayList.c', 'BitArray.c',
+                    'HashTable.c']))
