* Add SymbolTable_t, the members of SymbolTable_t will be added as required.

--- a/generic/algorithm/SConscript
+++ b/generic/algorithm/SConscript
@@ -5,4 +5,5 @@
 Import('env')
 Import('libobjs')
 
-libobjs.extend(env.Object('EBNF.c'))
+libobjs.extend(map(lambda src: env.Object(src),
+                   ['EBNF.c', 'SymbolTable.c']))
