--- a/trunk/generic/algorithm/lexical/SConscript
+++ b/trunk/generic/algorithm/lexical/SConscript
@@ -2,12 +2,8 @@
 # Author: Charles Wang <charlesw123456@gmail.com>
 # License: GPLv2
 
-import os.path
-
 Import('env')
 Import('libobjs')
 
 libobjs.extend(map(lambda src: env.Object(src),
-                   ['EBNF.c', 'SymbolTable.c']))
-
-SConscript(os.path.join('lexical', 'SConscript'))
+                   ['CharClass.c', 'CharSet.c']))
