--- a/generic/SConstruct
+++ b/generic/SConstruct
@@ -4,23 +4,25 @@
 
 import os
 import os.path
+import sys
 
 topsrc = os.getcwd()
 cpppath = [topsrc] + map(lambda subdir: os.path.join(topsrc, subdir),
                          ['core', 'algorithm', 'schemes'])
-# The following Environment setup is used with gcc in Win32.
-env = Environment(ENV = os.environ,
-                  tools = ['gcc', 'g++', 'gnulink', 'gas', 'ar'],
-                  CCFLAGS = ['-g', '-Wall'],
-                  CPPPATH = cpppath)
 
-# The following Environment setup is used with MSVC in Win32.
-#env = Environment(ENV = os.environ,
-#                  CPPPATH = cpppath)
-
-# The following Environemtn setup is used in Linux.
-#env = Environment(CCFLAGS = ['-g', '-Wall'],
-#                  CPPPATH = cpppath)
+if sys.platform == 'win32':
+    # The following Environment setup is used with MSVC in Win32.
+    env = Environment(ENV = os.environ,
+                      CPPPATH = cpppath)
+    # The following Environment setup is used with gcc in Win32.
+    #env = Environment(ENV = os.environ,
+    #                  tools = ['gcc', 'g++', 'gnulink', 'gas', 'ar'],
+    #                  CCFLAGS = ['-g', '-Wall'],
+    #                  CPPPATH = cpppath)
+elif sys.platform == 'linux2':
+    # The following Environemtn setup is used in Linux.
+    env = Environment(CCFLAGS = ['-g', '-Wall'],
+                      CPPPATH = cpppath)
 
 Export('env')
 
