* Reopen tests to do some tests.

--- a/generic/SConstruct
+++ b/generic/SConstruct
@@ -35,8 +35,9 @@ SConscript(os.path.join('algorithm', 'SConscript'))
 SConscript(os.path.join('schemes', 'SConscript'))
 
 lib = env.Library('coco', libobjs)
+Export('lib')
 
-#SConscript(os.path.join('tests', 'SConscript'))
+SConscript(os.path.join('tests', 'SConscript'))
 
 #env.Program('Src2Frame', ['Src2Frame.c', lib])
 #env.Program('TestScanner', ['TestScanner.c', 'Scanner.c'])
