* All heap objects are managed in ArrayList now.

--- a/generic/algorithm/SConscript
+++ b/generic/algorithm/SConscript
@@ -8,7 +8,8 @@ Import('env')
 Import('libobjs')
 
 libobjs.extend(map(lambda src: env.Object(src),
-                   ['EBNF.c', 'SymbolTable.c', 'Lexical.c', 'Syntax.c']))
+                   ['EBNF.c', 'Symbols.c', 'SymbolTable.c',
+                    'Lexical.c', 'Syntax.c']))
 
 SConscript(os.path.join('lexical', 'SConscript'))
 SConscript(os.path.join('syntax', 'SConscript'))
