--- a/generic/SConstruct
+++ b/generic/SConstruct
@@ -45,5 +45,5 @@ SConscript(os.path.join('tests', 'SConscript'))
 
 #env.Program('Src2Frame', ['Src2Frame.c', lib])
 #env.Program('TestScanner', ['TestScanner.c', 'Scanner.c'])
-env.Program('Coco', ['Coco.c', lib])
+env.Program('Coco', ['Coco.c', lib], LIBS=['expat'])
 #env.Program('CocoXml', ['CocoXml.c', lib])
