* Add CocoInit to do the convert.

--- a/generic/SConstruct
+++ b/generic/SConstruct
@@ -43,7 +43,5 @@ Export('lib')
 
 SConscript(os.path.join('tests', 'SConscript'))
 
-#env.Program('Src2Frame', ['Src2Frame.c', lib])
-#env.Program('TestScanner', ['TestScanner.c', 'Scanner.c'])
 env.Program('Coco', ['Coco.c', lib], LIBS=['expat'])
-#env.Program('CocoXml', ['CocoXml.c', lib])
+env.Program('CocoInit', ['CocoInit.c'])
