* Do more on Rss.

--- a/generic/SConstruct
+++ b/generic/SConstruct
@@ -45,3 +45,5 @@ SConscript(os.path.join('tests', 'SConscript'))
 
 env.Program('Coco', ['Coco.c', lib], LIBS=['expat'])
 env.Program('CocoInit', ['CocoInit.c'])
+
+SConscript(os.path.join('xmltest', 'SConscript'))
