* Update xmltest, not finished yet.

--- a/generic/xmltest/SConscript
+++ b/generic/xmltest/SConscript
@@ -4,5 +4,5 @@
 
 Import('env', 'lib')
 
-env.Program('TestRss', ['TestRss.c', 'RssData.c', 'Scanner4Xml.c',
-                        'Parser4Xml.c', 'Data4Xml.c', lib])
+env.Program('TestRss', ['TestRss.c', 'RssData.c',
+                        'Scanner4Xml.c', 'Parser4Xml.c', lib])
