--- a/trunk/schemes/c/SConscript
+++ b/trunk/schemes/c/SConscript
@@ -8,4 +8,4 @@ Import('libobjs')
 libobjs.extend(map(lambda src: env.Object(src),
                    ['CDefs.c', 'ErrorPool.c', 'Buffer.c', 'Token.c',
                     'Position.c', 'Scanner.c', 'Parser.c', 'XmlScanner.c',
-                    'XmlParser.c', 'COutputScheme.c', 'XmlScanOper.c']))
+                    'XmlParser.c', 'COutputScheme.c']))
