--- a/schemes/csharp/SConscript
+++ b/schemes/csharp/SConscript
@@ -5,9 +5,9 @@
 import os.path
 
 Import('env')
-Import('libobjs')
+Import('cocosrc_libobjs')
 
-libobjs.extend(map(lambda src: env.Object(src),
-                   ['CSharpOutputScheme.c']))
+cocosrc_libobjs.extend(map(lambda src: env.Object(src),
+                           ['CSharpOutputScheme.c']))
 
 SConscript(os.path.join('test', 'SConscript'))
