--- a/algorithm/lexical/SConscript
+++ b/algorithm/lexical/SConscript
@@ -3,9 +3,9 @@
 # License: GPLv2
 
 Import('env')
-Import('libobjs')
+Import('cocosrc_libobjs')
 
-libobjs.extend(map(lambda src: env.Object(src),
-                   ['Action', 'CharClass.c', 'CharSet.c', 'Comment.c',
-                    'Melted.c', 'Nodes.c', 'State.c', 'Target.c',
-                    'Transition.c']))
+cocosrc_libobjs.extend(map(lambda src: env.Object(src),
+                           ['Action', 'CharClass.c', 'CharSet.c', 'Comment.c',
+                            'Melted.c', 'Nodes.c', 'State.c', 'Target.c',
+                            'Transition.c']))
