* Use libcoco.a to provide application required objects for c/cxml schemes. * Install libcoco.a so the applications shall not have to import it again and again. * Put the other objects into libcocosrc.a, and this is not installed.

--- a/trunk/xmltest/SConscript
+++ b/trunk/xmltest/SConscript
@@ -2,8 +2,8 @@
 # Author: Charles Wang <charlesw123456@gmail.com>
 # License: GPLv2
 
-Import('env', 'lib')
+Import('env', 'lib', 'cocosrc_lib')
 
 env.Program('TestRss', ['TestRss.c', 'RssData.c', 'Scanner4Xml.c',
-                        'Parser4Xml.c', 'XmlScanOper.c', lib],
+                        'Parser4Xml.c', cocosrc_lib, lib],
             LIBS = ['expat'])
