--- a/trunk/algorithm/SConscript
+++ b/trunk/algorithm/SConscript
@@ -5,11 +5,12 @@
 import os.path
 
 Import('env')
-Import('libobjs')
+Import('cocosrc_libobjs')
 
-libobjs.extend(map(lambda src: env.Object(src),
-                   ['EBNF.c', 'Symbols.c', 'SymbolTable.c',
-                    'Lexical.c', 'Syntax.c', 'XmlSpec.c', 'XmlSpecMap.c']))
+cocosrc_libobjs.extend(map(lambda src: env.Object(src),
+                           ['EBNF.c', 'Symbols.c', 'SymbolTable.c',
+                            'Lexical.c', 'Syntax.c', 'XmlSpec.c',
+                            'XmlSpecMap.c']))
 
 SConscript(os.path.join('lexical', 'SConscript'))
 SConscript(os.path.join('syntax', 'SConscript'))
