--- a/trunk/algorithm/syntax/SConscript
+++ b/trunk/algorithm/syntax/SConscript
@@ -3,7 +3,6 @@
 # License: GPLv2
 
 Import('env')
-Import('libobjs')
+Import('cocosrc_libobjs')
 
-libobjs.extend(map(lambda src: env.Object(src),
-                   ['Nodes.c']))
+cocosrc_libobjs.extend(map(lambda src: env.Object(src), ['Nodes.c']))
