--- a/trunk/core/SConscript
+++ b/trunk/core/SConscript
@@ -3,8 +3,9 @@
 # License: GPLv2
 
 Import('env')
-Import('libobjs')
+Import('cocosrc_libobjs')
 
-libobjs.extend(map(lambda src: env.Object(src),
-                   ['Defs.c', 'Object.c', 'BasicObjects.c', 'ArrayList.c',
-                    'BitArray.c', 'HashTable.c', 'Globals.c', 'Arguments.c']))
+cocosrc_libobjs.extend(map(lambda src: env.Object(src),
+                           ['Defs.c', 'Object.c', 'BasicObjects.c',
+                            'ArrayList.c', 'BitArray.c', 'HashTable.c',
+                            'Globals.c', 'Arguments.c']))
