* Move csharp test into tests. * Adjust build scripts.

--- a/tests/SConscript
+++ b/tests/SConscript
@@ -5,4 +5,5 @@
 import os.path
 
 SConscript(os.path.join('basic', 'SConscript'))
+SConscript(os.path.join('csharp', 'SConscript'))
 SConscript(os.path.join('rss', 'SConscript'))
